[metadata]
name = pcm
author = kjnh10
author_email = kojinho10@gmail.com
description = tiny programing contest manager
url = https://github.com/kjnh10/pcm
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
setup_requires = setuptools_scm
install_requires =
    Click>=7.0
    online-judge-tools>=9.0.0
    online-judge-verify-helper
    toml
    pyside2
    pyperclip
include_package_data = True
python_requires = >=3.6

[options.extras_require]
dev =
    isort == 5.5.2
    mypy == 0.782
    pylint == 2.6.0
    yapf == 0.30.0

[yapf]
column_limit = 9999

[isort]
line_length = 9999
default_section = THIRDPARTY
known_first_party = onlinejudge

[mypy]

[mypy-*.*]
ignore_missing_imports = True

[options.entry_points]
console_scripts =
    pcm=pcm.__main__:cli
    pcm-cc=pcm.cc_server.__main__:main

